--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "dependencies": {
     "@bugsnag/react-native": "^7.3.5",
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/blur": "^3.6.0",
@@ -93,6 +94,8 @@
     "@react-native-firebase/app": "^10.0.0",
     "@react-native-firebase/iid": "^10.0.0",
     "@react-native-firebase/messaging": "^10.0.0",
+    "@walletconnect/client": "^2.0.0-beta.22",
+    "@walletconnect/crypto": "^1.0.1",
     "async-lock": "^1.1.2",
     "biggystring": "^3.0.2",
     "cleaners": "^0.3.12",
@@ -112,6 +115,7 @@
     "edge-plugin-bity": "https://github.com/EdgeApp/edge-plugin-bity.git#2bcedc778201f67e425ab17dd19bce7af05e1cff",
     "edge-plugin-simplex": "https://github.com/EdgeApp/edge-plugin-simplex.git#4842daad5fd560cd462f4668ab17c521a16a6cd9",
     "edge-plugin-wyre": "https://github.com/EdgeApp/edge-plugin-wyre.git#6412ad28462278b84313537f21a53d307633c5d0",
+    "merge": "^2.1.1",
     "qrcode-generator": "^1.4.4",
     "react": "17.0.1",
     "react-native": "^0.64.2",
