--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "detect-bundler": "^1.0.0",
     "detox": "^18.10.0",
     "disklet": "^0.5.2",
-    "edge-core-js": "^0.19.10",
+    "edge-core-js": "https://github.com/EdgeApp/edge-core-js.git#9bc2df4add16aae0d83fa48100e188192df74726",
     "edge-currency-accountbased": "^0.14.1",
     "edge-currency-bitcoin": "^4.9.20",
     "edge-currency-monero": "^0.3.4",
