--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "edge-currency-accountbased": "^0.15.1",
     "edge-currency-bitcoin": "^4.9.20",
     "edge-currency-monero": "^0.4.0",
+    "edge-currency-plugins": "https://github.com/EdgeApp/edge-currency-plugins.git#0.0.1-alpha.9",
     "edge-exchange-plugins": "^0.12.14",
     "edge-login-ui-rn": "^0.9.30",
     "edge-plugin-bity": "https://github.com/EdgeApp/edge-plugin-bity.git#2a52e6cb86512b98f69f8f5dd3105cdf6d0c2d8a",
